全体的にカテゴリーを変更

--- a/nmp300.hatenablog.com/entry/2019/06/16/105057.md
+++ b/nmp300.hatenablog.com/entry/2019/06/16/105057.md
@@ -1,7 +1,10 @@
 ---
 Title: プログラミング学習を始めました
+Category:
+- 学習記録
+- FJORD BOOT CAMP
 Date: 2019-06-16T10:50:57+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/06/16/105057
+URL: https://docs.koheitakahashi.com/entry/2019/06/16/105057
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/17680117127201083119
 ---
 
