--- a/nmp300.hatenablog.com/entry/2019/06/18/110908.md
+++ b/nmp300.hatenablog.com/entry/2019/06/18/110908.md
@@ -1,7 +1,9 @@
 ---
 Title: 黒い画面 (terminal) に慣れる2　〜コマンド、オプション編〜
+Category:
+- TIL
 Date: 2019-06-18T11:09:08+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/06/18/110908
+URL: https://docs.koheitakahashi.com/entry/2019/06/18/110908
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/17680117127202414224
 ---
 
