--- a/nmp300.hatenablog.com/entry/2019/06/19/102523.md
+++ b/nmp300.hatenablog.com/entry/2019/06/19/102523.md
@@ -1,7 +1,10 @@
 ---
 Title: HTMLについて学んだこと　まとめ
+Category:
+- TIL
+- HTML
 Date: 2019-06-19T10:25:23+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/06/19/102523
+URL: https://docs.koheitakahashi.com/entry/2019/06/19/102523
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/17680117127202975263
 ---
 
