--- a/nmp300.hatenablog.com/entry/2019/06/24/155157.md
+++ b/nmp300.hatenablog.com/entry/2019/06/24/155157.md
@@ -1,7 +1,10 @@
 ---
 Title: fjordbootcamp 「CSS tutorial」終了‼️
+Category:
+- 学習記録
+- FJORD BOOT CAMP
 Date: 2019-06-24T15:51:57+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/06/24/155157
+URL: https://docs.koheitakahashi.com/entry/2019/06/24/155157
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/17680117127205853959
 ---
 
