--- a/nmp300.hatenablog.com/entry/2019/06/25/091240.md
+++ b/nmp300.hatenablog.com/entry/2019/06/25/091240.md
@@ -1,7 +1,10 @@
 ---
 Title: Debianとは、なんぞや❓
+Category:
+- TIL
+- Linux
 Date: 2019-06-25T09:12:40+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/06/25/091240
+URL: https://docs.koheitakahashi.com/entry/2019/06/25/091240
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/17680117127206980800
 ---
 
