--- a/nmp300.hatenablog.com/entry/2019/06/25/164145.md
+++ b/nmp300.hatenablog.com/entry/2019/06/25/164145.md
@@ -1,7 +1,9 @@
 ---
 Title: "標準入出力・リダイレクション・パイプを理解したい\U0001F976"
+Category:
+- TIL
 Date: 2019-06-25T16:41:45+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/06/25/164145
+URL: https://docs.koheitakahashi.com/entry/2019/06/25/164145
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/17680117127207175526
 ---
 
