--- a/nmp300.hatenablog.com/entry/2019/06/26/160305.md
+++ b/nmp300.hatenablog.com/entry/2019/06/26/160305.md
@@ -1,7 +1,10 @@
 ---
 Title: aptとは？〜どこからやってくるのか〜
+Category:
+- TIL
+- Linux
 Date: 2019-06-26T16:03:05+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/06/26/160305
+URL: https://docs.koheitakahashi.com/entry/2019/06/26/160305
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/17680117127208885661
 ---
 
