--- a/nmp300.hatenablog.com/entry/2019/06/28/142157.md
+++ b/nmp300.hatenablog.com/entry/2019/06/28/142157.md
@@ -1,7 +1,9 @@
 ---
 Title: 私がsshのポート番号を変更できなかった1つの理由・・・
+Category:
+- TIL
 Date: 2019-06-28T14:21:57+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/06/28/142157
+URL: https://docs.koheitakahashi.com/entry/2019/06/28/142157
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/17680117127209993642
 ---
 
