--- a/nmp300.hatenablog.com/entry/2019/06/28/152729.md
+++ b/nmp300.hatenablog.com/entry/2019/06/28/152729.md
@@ -1,7 +1,9 @@
 ---
 Title: "SSLとは？\U0001F914"
+Category:
+- TIL
 Date: 2019-06-28T15:27:29+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/06/28/152729
+URL: https://docs.koheitakahashi.com/entry/2019/06/28/152729
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/17680117127210096281
 ---
 
