--- a/nmp300.hatenablog.com/entry/2019/06/30/075241.md
+++ b/nmp300.hatenablog.com/entry/2019/06/30/075241.md
@@ -1,7 +1,10 @@
 ---
 Title: "PostgreSQLをDebianにインストールします\U0001F606"
+Category:
+- TIL
+- データベース
 Date: 2019-06-30T07:52:41+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/06/30/075241
+URL: https://docs.koheitakahashi.com/entry/2019/06/30/075241
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/17680117127210679987
 ---
 
