--- a/nmp300.hatenablog.com/entry/2019/06/30/124716.md
+++ b/nmp300.hatenablog.com/entry/2019/06/30/124716.md
@@ -1,7 +1,10 @@
 ---
 Title: "PostgreSQL、データベースユーザーの設定から外部接続まで\U0001F4AA"
+Category:
+- TIL
+- データベース
 Date: 2019-06-30T12:47:16+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/06/30/124716
+URL: https://docs.koheitakahashi.com/entry/2019/06/30/124716
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/17680117127210927034
 ---
 
