--- a/nmp300.hatenablog.com/entry/2019/07/05/114126.md
+++ b/nmp300.hatenablog.com/entry/2019/07/05/114126.md
@@ -1,7 +1,10 @@
 ---
 Title: "Linuxのシェルスクリプト作成で私がつまづいたところ\U0001F976"
+Category:
+- TIL
+- Linux
 Date: 2019-07-05T11:41:26+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/07/05/114126
+URL: https://docs.koheitakahashi.com/entry/2019/07/05/114126
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/17680117127213612384
 ---
 
