--- a/nmp300.hatenablog.com/entry/2019/07/10/085111.md
+++ b/nmp300.hatenablog.com/entry/2019/07/10/085111.md
@@ -1,7 +1,10 @@
 ---
 Title: Ruby学習振り返り インストール〜四則演算 (190709)
+Category:
+- TIL
+- Ruby
 Date: 2019-07-10T08:51:11+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/07/10/085111
+URL: https://docs.koheitakahashi.com/entry/2019/07/10/085111
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/17680117127216152212
 ---
 
