--- a/nmp300.hatenablog.com/entry/2019/07/10/132052.md
+++ b/nmp300.hatenablog.com/entry/2019/07/10/132052.md
@@ -1,7 +1,10 @@
 ---
 Title: "Nginx 答えはエラーコードにあった\U0001F4A6"
+Category:
+- TIL
+- サーバー
 Date: 2019-07-10T13:20:52+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/07/10/132052
+URL: https://docs.koheitakahashi.com/entry/2019/07/10/132052
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/17680117127216241824
 ---
 
