--- a/nmp300.hatenablog.com/entry/2019/07/11/154907.md
+++ b/nmp300.hatenablog.com/entry/2019/07/11/154907.md
@@ -1,7 +1,10 @@
 ---
 Title: Ruby学習振り返り 定数〜メソッド (190710)
+Category:
+- TIL
+- Ruby
 Date: 2019-07-11T15:49:07+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/07/11/154907
+URL: https://docs.koheitakahashi.com/entry/2019/07/11/154907
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/17680117127216700146
 ---
 
