--- a/nmp300.hatenablog.com/entry/2019/07/15/093515.md
+++ b/nmp300.hatenablog.com/entry/2019/07/15/093515.md
@@ -1,7 +1,10 @@
 ---
 Title: Rubyのクラスとは？モジュールとは？
+Category:
+- TIL
+- Ruby
 Date: 2019-07-15T09:35:15+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/07/15/093515
+URL: https://docs.koheitakahashi.com/entry/2019/07/15/093515
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/17680117127217863793
 ---
 
