--- a/nmp300.hatenablog.com/entry/2019/07/29/194732.md
+++ b/nmp300.hatenablog.com/entry/2019/07/29/194732.md
@@ -1,7 +1,10 @@
 ---
 Title: プログラミングの勉強を始めて40日が経過しました‼️
+Category:
+- 学習記録
+- FJORD BOOT CAMP
 Date: 2019-07-29T19:47:32+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/07/29/194732
+URL: https://docs.koheitakahashi.com/entry/2019/07/29/194732
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613379466710
 ---
 
