--- a/nmp300.hatenablog.com/entry/2019/07/31/185523.md
+++ b/nmp300.hatenablog.com/entry/2019/07/31/185523.md
@@ -1,7 +1,9 @@
 ---
 Title: 質問の仕方に不安があったので、調べてみました‼️ ~より良い質問ができることを目指して~
+Category:
+- docs
 Date: 2019-07-31T18:55:23+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/07/31/185523
+URL: https://docs.koheitakahashi.com/entry/2019/07/31/185523
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613382239975
 ---
 
