--- a/nmp300.hatenablog.com/entry/2019/09/05/152154.md
+++ b/nmp300.hatenablog.com/entry/2019/09/05/152154.md
@@ -1,7 +1,10 @@
 ---
 Title: Rubyでwcコマンドを作成しました。
+Category:
+- TIL
+- Ruby
 Date: 2019-09-05T15:21:54+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/09/05/152154
+URL: https://docs.koheitakahashi.com/entry/2019/09/05/152154
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613422149217
 ---
 
