--- a/nmp300.hatenablog.com/entry/2019/09/07/104155.md
+++ b/nmp300.hatenablog.com/entry/2019/09/07/104155.md
@@ -1,7 +1,10 @@
 ---
 Title: Git、Githubについて、出てくる単語を整理しました
+Category:
+- TIL
+- Git・GitHub
 Date: 2019-09-07T10:41:55+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/09/07/104155
+URL: https://docs.koheitakahashi.com/entry/2019/09/07/104155
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613423206250
 ---
 
