--- a/nmp300.hatenablog.com/entry/2019/09/07/164947.md
+++ b/nmp300.hatenablog.com/entry/2019/09/07/164947.md
@@ -1,7 +1,10 @@
 ---
 Title: "Gitの基本的な操作を試してみました\U0001F4AA"
+Category:
+- TIL
+- Git・GitHub
 Date: 2019-09-07T16:49:47+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/09/07/164947
+URL: https://docs.koheitakahashi.com/entry/2019/09/07/164947
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613423398955
 ---
 
