--- a/nmp300.hatenablog.com/entry/2019/09/12/090931.md
+++ b/nmp300.hatenablog.com/entry/2019/09/12/090931.md
@@ -1,7 +1,10 @@
 ---
 Title: postgresqlが立ち上がらなくなった時の解決方法
+Category:
+- TIL
+- データベース
 Date: 2019-09-12T09:09:31+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/09/12/090931
+URL: https://docs.koheitakahashi.com/entry/2019/09/12/090931
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613430748801
 ---
 
