--- a/nmp300.hatenablog.com/entry/2019/09/14/142939.md
+++ b/nmp300.hatenablog.com/entry/2019/09/14/142939.md
@@ -1,10 +1,12 @@
 ---
 Title: SQL構文まとめ
+Category:
+- TIL
+- データベース
 Date: 2019-09-14T14:29:39+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/09/14/142939
+URL: https://docs.koheitakahashi.com/entry/2019/09/14/142939
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613433088789
 ---
-
 
 SQL構文について、自分が覚えておけるように大雑把ですが、まとめてみました😆
 
