--- a/nmp300.hatenablog.com/entry/2019/09/14/160220.md
+++ b/nmp300.hatenablog.com/entry/2019/09/14/160220.md
@@ -1,7 +1,10 @@
 ---
 Title: 相関サブクエリの使い方
+Category:
+- TIL
+- データベース
 Date: 2019-09-14T16:02:20+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/09/14/160220
+URL: https://docs.koheitakahashi.com/entry/2019/09/14/160220
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613433116566
 ---
 
