--- a/nmp300.hatenablog.com/entry/2019/09/17/185756.md
+++ b/nmp300.hatenablog.com/entry/2019/09/17/185756.md
@@ -1,7 +1,10 @@
 ---
 Title: データベースの正規化とは？
+Category:
+- TIL
+- データベース
 Date: 2019-09-17T18:57:56+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/09/17/185756
+URL: https://docs.koheitakahashi.com/entry/2019/09/17/185756
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613435376290
 ---
 
