--- a/nmp300.hatenablog.com/entry/2019/09/18/192702.md
+++ b/nmp300.hatenablog.com/entry/2019/09/18/192702.md
@@ -1,7 +1,10 @@
 ---
 Title: レシートからER図を作成するまで
+Category:
+- TIL
+- データベース
 Date: 2019-09-18T19:27:02+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/09/18/192702
+URL: https://docs.koheitakahashi.com/entry/2019/09/18/192702
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613436171942
 ---
 
