--- a/nmp300.hatenablog.com/entry/2019/09/21/193347.md
+++ b/nmp300.hatenablog.com/entry/2019/09/21/193347.md
@@ -1,11 +1,12 @@
 ---
 Title: 【データベース】外部キーとは
+Category:
+- TIL
+- データベース
 Date: 2019-09-21T19:33:47+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/09/21/193347
+URL: https://docs.koheitakahashi.com/entry/2019/09/21/193347
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613437640218
 ---
-
-
 
 ## はじめに
 fjordbootcampの課題で「TwitterのER図を作成」しているのですが、自分でER図を色々と考えているうちに、外部キーというものがどのようなものなのか分からなくなってきてしまったので、概念を整理するためにまとめたいと思います。
