--- a/nmp300.hatenablog.com/entry/2019/09/24/194726.md
+++ b/nmp300.hatenablog.com/entry/2019/09/24/194726.md
@@ -1,12 +1,12 @@
 ---
 Title: ' 中間テーブルとは?'
 Category:
-- データベース設計
+- TIL
+- データベース
 Date: 2019-09-24T19:47:26+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/09/24/194726
+URL: https://docs.koheitakahashi.com/entry/2019/09/24/194726
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613439999824
 ---
-
 
 ## はじめに
 
