--- a/nmp300.hatenablog.com/entry/2019/09/25/192759.md
+++ b/nmp300.hatenablog.com/entry/2019/09/25/192759.md
@@ -1,9 +1,10 @@
 ---
 Title: RESTとは
 Category:
+- TIL
 - Webアプリケーション
 Date: 2019-09-25T19:27:59+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/09/25/192759
+URL: https://docs.koheitakahashi.com/entry/2019/09/25/192759
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613440446608
 ---
 
