--- a/nmp300.hatenablog.com/entry/2019/09/26/195506.md
+++ b/nmp300.hatenablog.com/entry/2019/09/26/195506.md
@@ -2,9 +2,8 @@
 Title: 超初歩的なあっち向いてホイゲーム作りました
 Category:
 - Sinatra
-- Webアプリケーション
 Date: 2019-09-26T19:55:06+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/09/26/195506
+URL: https://docs.koheitakahashi.com/entry/2019/09/26/195506
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613440928954
 ---
 
