--- a/nmp300.hatenablog.com/entry/2019/09/27/195503.md
+++ b/nmp300.hatenablog.com/entry/2019/09/27/195503.md
@@ -1,7 +1,10 @@
 ---
 Title: プログラミングを勉強し始めてから、500時間・100日が経過しました。
+Category:
+- 学習記録
+- FJORD BOOT CAMP
 Date: 2019-09-27T19:55:03+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/09/27/195503
+URL: https://docs.koheitakahashi.com/entry/2019/09/27/195503
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613441410312
 ---
 
