--- a/nmp300.hatenablog.com/entry/2019/09/28/185246.md
+++ b/nmp300.hatenablog.com/entry/2019/09/28/185246.md
@@ -1,12 +1,12 @@
 ---
 Title: ユニークな名前を持つファイルを作成するには
 Category:
+- TIL
 - Ruby
 Date: 2019-09-28T18:52:46+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/09/28/185246
+URL: https://docs.koheitakahashi.com/entry/2019/09/28/185246
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613441819028
 ---
-
 
 ## はじめに
 Sinatraで簡単なメモ帳アプリを作成していく中で、「投稿したメモをデータベースではなく、ファイルに保存したいのだけど、どうすれば次々とファイルを作成していくことができるんだ？」と悩んだので、その解決方法の一つをまとめたいと思います。
