--- a/nmp300.hatenablog.com/entry/2019/10/01/193855.md
+++ b/nmp300.hatenablog.com/entry/2019/10/01/193855.md
@@ -1,13 +1,12 @@
 ---
 Title: Rubyで用意したハッシュをJSON形式にするには？
 Category:
+- TIL
 - Ruby
 Date: 2019-10-01T19:38:55+09:00
 URL: https://docs.koheitakahashi.com/entry/2019/10/01/193855
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613443315100
 ---
-
-
 
 ## はじめに
 Rubyで用意JSONファイルを作成する際に、どのようにすれば良いのだろうと悩みました。
