--- a/nmp300.hatenablog.com/entry/2019/10/07/191232.md
+++ b/nmp300.hatenablog.com/entry/2019/10/07/191232.md
@@ -1,7 +1,8 @@
 ---
 Title: CSSファイルが読み込めないエラーが出たときはパスを確認すべし
 Category:
-- HTML
+- docs
+- CSS
 - Sinatra
 Date: 2019-10-07T19:12:32+09:00
 URL: https://docs.koheitakahashi.com/entry/2019/10/07/191232
