--- a/nmp300.hatenablog.com/entry/2019/10/09/194550.md
+++ b/nmp300.hatenablog.com/entry/2019/10/09/194550.md
@@ -1,10 +1,10 @@
 ---
 Title: MacOSのアップデートとクリーンインストールを行いました
 Category:
+- docs
 - Mac
-- Catalina
 Date: 2019-10-09T19:45:50+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/10/09/194550
+URL: https://docs.koheitakahashi.com/entry/2019/10/09/194550
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613446931123
 ---
 
