--- a/nmp300.hatenablog.com/entry/2019/10/10/194927.md
+++ b/nmp300.hatenablog.com/entry/2019/10/10/194927.md
@@ -1,13 +1,12 @@
 ---
 Title: 自作アプリのアイディアを出してみました
 Category:
+- docs
 - Webアプリ
 Date: 2019-10-10T19:49:27+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/10/10/194927
+URL: https://docs.koheitakahashi.com/entry/2019/10/10/194927
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613447451593
 ---
-
-
 
 ## はじめに
 同じく、Fjordbootcampに参加している@chihasoさんのブログ([Webアプリ：ネタ検討のため困っていることを列挙 \- 自分にやさしく学ぶプログラミング](https://chihaso.hatenablog.com/entry/2019/10/01/135428))で、最終課題に向けて今の段階から、自作アプリのアイディア出しを
