--- a/nmp300.hatenablog.com/entry/2019/10/16/194740.md
+++ b/nmp300.hatenablog.com/entry/2019/10/16/194740.md
@@ -1,9 +1,10 @@
 ---
 Title: クラスメソッドとインスタンスメソッドの違いは?
 Category:
+- TIL
 - Ruby
 Date: 2019-10-16T19:47:40+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/10/16/194740
+URL: https://docs.koheitakahashi.com/entry/2019/10/16/194740
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613450333113
 ---
 
