--- a/nmp300.hatenablog.com/entry/2019/10/17/194106.md
+++ b/nmp300.hatenablog.com/entry/2019/10/17/194106.md
@@ -1,10 +1,11 @@
 ---
 Title: Sinatraを使って簡単なメモアプリを作成して学んだこと
 Category:
+- 学習記録
+- FJORD BOOT CAMP
 - Sinatra
-- Webアプリ
 Date: 2019-10-17T19:41:06+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/10/17/194106
+URL: https://docs.koheitakahashi.com/entry/2019/10/17/194106
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613450826265
 ---
 
