--- a/nmp300.hatenablog.com/entry/2019/10/20/124402.md
+++ b/nmp300.hatenablog.com/entry/2019/10/20/124402.md
@@ -1,9 +1,9 @@
 ---
 Title: 日々の学習のアウトプットとしてYouTubeを活用してみました
 Category:
-- YouTube
+- YouTube channel
 Date: 2019-10-20T12:44:02+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/10/20/124402
+URL: https://docs.koheitakahashi.com/entry/2019/10/20/124402
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613452575881
 ---
 
