--- a/nmp300.hatenablog.com/entry/2019/10/24/085211.md
+++ b/nmp300.hatenablog.com/entry/2019/10/24/085211.md
@@ -1,9 +1,10 @@
 ---
 Title: scaffoldを使ってみました ~Ruby on Rails学び始めました~
 Category:
+- TIL
 - Ruby on Rails
 Date: 2019-10-24T08:52:11+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/10/24/085211
+URL: https://docs.koheitakahashi.com/entry/2019/10/24/085211
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613454411927
 ---
 
