--- a/nmp300.hatenablog.com/entry/2019/10/26/191001.md
+++ b/nmp300.hatenablog.com/entry/2019/10/26/191001.md
@@ -1,10 +1,11 @@
 ---
 Title: RSpecを使ってメモアプリのテストを書いてみました ~RSpec入門~
 Category:
+- docs
 - Ruby on Rails
 - RSpec
 Date: 2019-10-26T19:10:01+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/10/26/191001
+URL: https://docs.koheitakahashi.com/entry/2019/10/26/191001
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613455782844
 ---
 
