--- a/nmp300.hatenablog.com/entry/2019/10/29/085229.md
+++ b/nmp300.hatenablog.com/entry/2019/10/29/085229.md
@@ -1,10 +1,9 @@
 ---
 Title: 『現場で使えるRuby on Rails5 速習実践ガイド』を読了しました。
 Category:
-- Ruby on Rails
 - 読書ノート
 Date: 2019-10-29T08:52:29+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/10/29/085229
+URL: https://docs.koheitakahashi.com/entry/2019/10/29/085229
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613457366942
 ---
 
