--- a/nmp300.hatenablog.com/entry/2019/11/06/084321.md
+++ b/nmp300.hatenablog.com/entry/2019/11/06/084321.md
@@ -1,9 +1,10 @@
 ---
 Title: プログラミングの勉強を初めて700時間(142日)が経過しました
 Category:
+- FJORD BOOT CAMP
 - 学習記録
 Date: 2019-11-06T08:43:21+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/11/06/084321
+URL: https://docs.koheitakahashi.com/entry/2019/11/06/084321
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613460992315
 ---
 
