--- a/nmp300.hatenablog.com/entry/2019/11/07/084606.md
+++ b/nmp300.hatenablog.com/entry/2019/11/07/084606.md
@@ -1,9 +1,10 @@
 ---
 Title: Pull Requestを出している最中に、そのRPのコミットユーザーを強制的に全て書き換えるとFile change画面が確認できなくなります
 Category:
-- Git・Github
+- TIL
+- Git・GitHub
 Date: 2019-11-07T08:46:06+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/11/07/084606
+URL: https://docs.koheitakahashi.com/entry/2019/11/07/084606
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613461764006
 ---
 
