--- a/nmp300.hatenablog.com/entry/2019/11/08/085055.md
+++ b/nmp300.hatenablog.com/entry/2019/11/08/085055.md
@@ -1,7 +1,10 @@
 ---
 Title: slimの書き方を学びました~slim入門~
+Category:
+- TIL
+- Ruby on Rails
 Date: 2019-11-08T08:50:55+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/11/08/085055
+URL: https://docs.koheitakahashi.com/entry/2019/11/08/085055
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613462779297
 ---
 
