--- a/nmp300.hatenablog.com/entry/2019/11/12/085335.md
+++ b/nmp300.hatenablog.com/entry/2019/11/12/085335.md
@@ -2,9 +2,9 @@
 Title: Ruby on Rails国際化プラクティスにOKをいただきました‼️
 Category:
 - FJORD BOOT CAMP
-- Ruby on Rails
+- 学習記録
 Date: 2019-11-12T08:53:35+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/11/12/085335
+URL: https://docs.koheitakahashi.com/entry/2019/11/12/085335
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613464579990
 ---
 
