--- a/nmp300.hatenablog.com/entry/2019/11/14/194254.md
+++ b/nmp300.hatenablog.com/entry/2019/11/14/194254.md
@@ -1,9 +1,10 @@
 ---
 Title: ローカルで色々といじっていたら、ログがグチャグチャになってしまったので、綺麗なリモートの内容をローカルに反映させたい時の方法について
 Category:
-- Git・Github
+- TIL
+- Git・GitHub
 Date: 2019-11-14T19:42:54+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/11/14/194254
+URL: https://docs.koheitakahashi.com/entry/2019/11/14/194254
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613463367845
 ---
 
