--- a/nmp300.hatenablog.com/entry/2019/11/15/084940.md
+++ b/nmp300.hatenablog.com/entry/2019/11/15/084940.md
@@ -2,9 +2,9 @@
 Title: kaminari課題にOKをいただけました
 Category:
 - FJORD BOOT CAMP
-- Ruby on Rails
+- 学習記録
 Date: 2019-11-15T08:49:40+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/11/15/084940
+URL: https://docs.koheitakahashi.com/entry/2019/11/15/084940
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613466161396
 ---
 
