--- a/nmp300.hatenablog.com/entry/2019/11/17/133233.md
+++ b/nmp300.hatenablog.com/entry/2019/11/17/133233.md
@@ -1,9 +1,10 @@
 ---
 Title: Ruby on Rails 6 の新機能を勉強しました
 Category:
+- TIL
 - Ruby on Rails
 Date: 2019-11-17T13:32:33+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/11/17/133233
+URL: https://docs.koheitakahashi.com/entry/2019/11/17/133233
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613466630147
 ---
 
