--- a/nmp300.hatenablog.com/entry/2019/11/22/132523.md
+++ b/nmp300.hatenablog.com/entry/2019/11/22/132523.md
@@ -1,9 +1,9 @@
 ---
 Title: Grow.rbに初参加させていただきました
 Category:
-- 参加レポート
+- イベント参加レポート
 Date: 2019-11-22T13:25:23+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/11/22/132523
+URL: https://docs.koheitakahashi.com/entry/2019/11/22/132523
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613469452813
 ---
 
