--- a/nmp300.hatenablog.com/entry/2019/11/23/200051.md
+++ b/nmp300.hatenablog.com/entry/2019/11/23/200051.md
@@ -2,9 +2,9 @@
 Title: ビンゴカード作成問題に取り組みました
 Category:
 - Ruby
-- YouTube
+- YouTube channel
 Date: 2019-11-23T20:00:51+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/11/23/200051
+URL: https://docs.koheitakahashi.com/entry/2019/11/23/200051
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613470095391
 ---
 
