--- a/nmp300.hatenablog.com/entry/2019/11/25/080746.md
+++ b/nmp300.hatenablog.com/entry/2019/11/25/080746.md
@@ -1,7 +1,10 @@
 ---
 Title: Railsアプリの国際化の手順をまとめてみました
+Category:
+- docs
+- Ruby on Rails
 Date: 2019-11-25T08:07:46+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/11/25/080746
+URL: https://docs.koheitakahashi.com/entry/2019/11/25/080746
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613470982250
 ---
 
