--- a/nmp300.hatenablog.com/entry/2019/11/26/103009.md
+++ b/nmp300.hatenablog.com/entry/2019/11/26/103009.md
@@ -1,9 +1,9 @@
 ---
 Title: 'Sendagaya.rb #296 に参加させていただきました'
 Category:
-- 参加レポート
+- イベント参加レポート
 Date: 2019-11-26T10:30:09+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/11/26/103009
+URL: https://docs.koheitakahashi.com/entry/2019/11/26/103009
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613471514223
 ---
 
