--- a/nmp300.hatenablog.com/entry/2019/11/26/103504.md
+++ b/nmp300.hatenablog.com/entry/2019/11/26/103504.md
@@ -1,7 +1,10 @@
 ---
 Title: プログラミングの勉強を初めて800時間(162日)が経過しました
+Category:
+- 学習記録
+- FJORD BOOT CAMP
 Date: 2019-11-26T10:35:04+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/11/26/103504
+URL: https://docs.koheitakahashi.com/entry/2019/11/26/103504
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613471516320
 ---
 
