--- a/nmp300.hatenablog.com/entry/2019/11/28/181407.md
+++ b/nmp300.hatenablog.com/entry/2019/11/28/181407.md
@@ -1,10 +1,10 @@
 ---
 Title: 自作サービスの作り方を勉強しました
 Category:
-- 自作サービス
+- イベント参加レポート
 - Webアプリ
 Date: 2019-11-28T18:14:07+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/11/28/181407
+URL: https://docs.koheitakahashi.com/entry/2019/11/28/181407
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613472745286
 ---
 
