--- a/nmp300.hatenablog.com/entry/2019/11/30/102643.md
+++ b/nmp300.hatenablog.com/entry/2019/11/30/102643.md
@@ -1,9 +1,9 @@
 ---
 Title: 'Gotanda.rb #40 に初参加させていただきました'
 Category:
-- 参加レポート
+- イベント参加レポート
 Date: 2019-11-30T10:26:43+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/11/30/102643
+URL: https://docs.koheitakahashi.com/entry/2019/11/30/102643
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613473651032
 ---
 
