--- a/nmp300.hatenablog.com/entry/2019/12/03/203142.md
+++ b/nmp300.hatenablog.com/entry/2019/12/03/203142.md
@@ -1,9 +1,9 @@
 ---
 Title: 'Sendagaya.rb #297 に参加させていただきました'
 Category:
-- 参加レポート
+- イベント参加レポート
 Date: 2019-12-03T20:31:42+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/12/03/203142
+URL: https://docs.koheitakahashi.com/entry/2019/12/03/203142
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613475458570
 ---
 
