--- a/nmp300.hatenablog.com/entry/2019/12/10/211614.md
+++ b/nmp300.hatenablog.com/entry/2019/12/10/211614.md
@@ -1,5 +1,7 @@
 ---
 Title: TDDについて勉強しました
+Category:
+- TIL
 Date: 2019-12-10T21:16:14+09:00
 URL: https://docs.koheitakahashi.com/entry/2019/12/10/211614
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613479619435
