--- a/nmp300.hatenablog.com/entry/2019/12/19/114342.md
+++ b/nmp300.hatenablog.com/entry/2019/12/19/114342.md
@@ -2,8 +2,9 @@
 Title: プログラミングを学び初めてから947時間(185日)が経過しました
 Category:
 - 学習記録
+- FJORD BOOT CAMP
 Date: 2019-12-19T11:43:42+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/12/19/114342
+URL: https://docs.koheitakahashi.com/entry/2019/12/19/114342
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613486428008
 ---
 
