--- a/nmp300.hatenablog.com/entry/2020/01/10/223654.md
+++ b/nmp300.hatenablog.com/entry/2020/01/10/223654.md
@@ -1,10 +1,10 @@
 ---
 Title: VPSがクラッキングされた？(その1) ログ調査編 ~ログファイルの意味を学ぶ~
 Category:
-- VPS
+- サーバー
 - Linux
 Date: 2020-01-10T22:36:54+09:00
-URL: https://nmp300.hatenablog.com/entry/2020/01/10/223654
+URL: https://docs.koheitakahashi.com/entry/2020/01/10/223654
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613495901095
 ---
 
