--- a/nmp300.hatenablog.com/entry/2020/01/12/103252.md
+++ b/nmp300.hatenablog.com/entry/2020/01/12/103252.md
@@ -1,10 +1,9 @@
 ---
 Title: Railsアプリのデプロイ手順をおさらい　~『Railsデプロイ』を読みました ~
 Category:
-- デプロイ
 - 読書ノート
 Date: 2020-01-12T10:32:52+09:00
-URL: https://nmp300.hatenablog.com/entry/2020/01/12/103252
+URL: https://docs.koheitakahashi.com/entry/2020/01/12/103252
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613495052127
 ---
 
