--- a/nmp300.hatenablog.com/entry/2020/01/25/104708.md
+++ b/nmp300.hatenablog.com/entry/2020/01/25/104708.md
@@ -1,9 +1,9 @@
 ---
 Title: Sendagaya.rb(#299)に参加しました ~初めてのソースコードリーディング~
 Category:
-- 参加レポート
+- イベント参加レポート
 Date: 2020-01-25T10:47:08+09:00
-URL: https://nmp300.hatenablog.com/entry/2020/01/25/104708
+URL: https://docs.koheitakahashi.com/entry/2020/01/25/104708
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613502082688
 ---
 
