--- a/nmp300.hatenablog.com/entry/2020/02/23/212628.md
+++ b/nmp300.hatenablog.com/entry/2020/02/23/212628.md
@@ -1,9 +1,10 @@
 ---
 Title: 最近使ってて良かったツールのご紹介
 Category:
-- ツール
+- docs
+- 開発周辺ツール
 Date: 2020-02-23T21:26:28+09:00
-URL: https://nmp300.hatenablog.com/entry/2020/02/23/212628
+URL: https://docs.koheitakahashi.com/entry/2020/02/23/212628
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613518250524
 ---
 
