--- a/nmp300.hatenablog.com/entry/2020/04/11/093020.md
+++ b/nmp300.hatenablog.com/entry/2020/04/11/093020.md
@@ -1,9 +1,10 @@
 ---
 Title: Chrome 81では、システムテストでクリップボードを読み込めなくなったみたいです
 Category:
+- TIL
 - テスト
 Date: 2020-04-11T09:30:20+09:00
-URL: https://nmp300.hatenablog.com/entry/2020/04/11/093020
+URL: https://docs.koheitakahashi.com/entry/2020/04/11/093020
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613547867003
 ---
 
