--- a/nmp300.hatenablog.com/entry/2020/05/11/113103.md
+++ b/nmp300.hatenablog.com/entry/2020/05/11/113103.md
@@ -1,9 +1,9 @@
 ---
 Title: オンラインでLT会を主催しました
 Category:
-- 参加レポート
+- イベント参加レポート
 Date: 2020-05-11T11:31:03+09:00
-URL: https://nmp300.hatenablog.com/entry/2020/05/11/113103
+URL: https://docs.koheitakahashi.com/entry/2020/05/11/113103
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613565043467
 ---
 
