--- a/nmp300.hatenablog.com/entry/2020/05/17/201020.md
+++ b/nmp300.hatenablog.com/entry/2020/05/17/201020.md
@@ -1,9 +1,9 @@
 ---
 Title: Sendagaya.rb#313 参加レポート
 Category:
-- 参加レポート
+- イベント参加レポート
 Date: 2020-05-17T20:10:20+09:00
-URL: https://nmp300.hatenablog.com/entry/2020/05/17/201020
+URL: https://docs.koheitakahashi.com/entry/2020/05/17/201020
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613569438015
 ---
 
