--- a/nmp300.hatenablog.com/entry/2020/05/24/094252.md
+++ b/nmp300.hatenablog.com/entry/2020/05/24/094252.md
@@ -1,9 +1,9 @@
 ---
 Title: Sendagaya.rb#314 参加レポート
 Category:
-- 参加レポート
+- イベント参加レポート
 Date: 2020-05-24T09:42:52+09:00
-URL: https://nmp300.hatenablog.com/entry/2020/05/24/094252
+URL: https://docs.koheitakahashi.com/entry/2020/05/24/094252
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613572920252
 ---
 
