--- a/nmp300.hatenablog.com/entry/2020/05/31/180759.md
+++ b/nmp300.hatenablog.com/entry/2020/05/31/180759.md
@@ -2,8 +2,9 @@
 Title: FJORD BOOT CAMPでスクラム開発のプラクティスを終えることができました
 Category:
 - FJORD BOOT CAMP
+- 学習記録
 Date: 2020-05-31T18:07:59+09:00
-URL: https://nmp300.hatenablog.com/entry/2020/05/31/180759
+URL: https://docs.koheitakahashi.com/entry/2020/05/31/180759
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613577103369
 ---
 
