--- a/nmp300.hatenablog.com/entry/2020/07/12/211530.md
+++ b/nmp300.hatenablog.com/entry/2020/07/12/211530.md
@@ -1,10 +1,11 @@
 ---
 Title: Railsアプリに、後からJavaScriptを導入する方法
 Category:
+- TIL
 - Ruby on Rails
 - JavaScript
 Date: 2020-07-12T21:15:30+09:00
-URL: https://nmp300.hatenablog.com/entry/2020/07/12/211530
+URL: https://docs.koheitakahashi.com/entry/2020/07/12/211530
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613597473192
 ---
 
