--- a/nmp300.hatenablog.com/entry/2020/08/10/155437.md
+++ b/nmp300.hatenablog.com/entry/2020/08/10/155437.md
@@ -1,6 +1,7 @@
 ---
 Title: ActionCableとVue.jsを使ってリアルタイム分報機能を実装しました(リリースはまだです)
 Category:
+- docs
 - FJORD BOOT CAMP
 - Ruby on Rails
 Date: 2020-08-10T15:54:37+09:00
