--- a/nmp300.hatenablog.com/entry/2020/08/16/225209.md
+++ b/nmp300.hatenablog.com/entry/2020/08/16/225209.md
@@ -1,11 +1,13 @@
 ---
-Title: ■
+Title: ノートアプリを探して、RubyMineに行き着きました
+Category:
+- docs
+- 開発周辺ツール
 Date: 2020-08-16T22:52:09+09:00
 URL: https://docs.koheitakahashi.com/entry/2020/08/16/225209
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613615409002
-Draft: true
 ---
-# ノートアプリを探して、RubyMineに行き着きました
+
 ## はじめに
 自分はなんでもメモに残しておきたいと思ってしまいまして、自分の日記や、技術的なメモ、ブログの下書きなどで頻繁にメモを作成します。
 
