--- a/nmp300.hatenablog.com/entry/2019/06/18/110737.md
+++ b/nmp300.hatenablog.com/entry/2019/06/18/110737.md
@@ -1,7 +1,9 @@
 ---
 Title: 黒い画面 (terminal) に慣れる1　〜基本中の基本編〜
+Category:
+- TIL
 Date: 2019-06-18T11:07:37+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/06/18/110737
+URL: https://docs.koheitakahashi.com/entry/2019/06/18/110737
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/17680117127202382774
 ---
 
