--- a/nmp300.hatenablog.com/entry/2019/07/12/141823.md
+++ b/nmp300.hatenablog.com/entry/2019/07/12/141823.md
@@ -1,7 +1,10 @@
 ---
 Title: Ruby学習振り返り 数値クラス (190711)
+Category:
+- TIL
+- Ruby
 Date: 2019-07-12T14:18:23+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/07/12/141823
+URL: https://docs.koheitakahashi.com/entry/2019/07/12/141823
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/17680117127217096736
 ---
 
