--- a/nmp300.hatenablog.com/entry/2019/07/13/113947.md
+++ b/nmp300.hatenablog.com/entry/2019/07/13/113947.md
@@ -1,7 +1,10 @@
 ---
 Title: Ruby学習振り返り 文字列クラス〜日付クラス (190712)
+Category:
+- TIL
+- Ruby
 Date: 2019-07-13T11:39:47+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/07/13/113947
+URL: https://docs.koheitakahashi.com/entry/2019/07/13/113947
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/17680117127217486339
 ---
 
