--- a/nmp300.hatenablog.com/entry/2019/09/30/183837.md
+++ b/nmp300.hatenablog.com/entry/2019/09/30/183837.md
@@ -1,8 +1,8 @@
 ---
 Title: 配列をerbで改行して表示するには？
 Category:
+- TIL
 - Ruby
-- Webアプリケーション
 Date: 2019-09-30T18:38:37+09:00
 URL: https://docs.koheitakahashi.com/entry/2019/09/30/183837
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613442803109
