--- a/nmp300.hatenablog.com/entry/2019/10/02/185309.md
+++ b/nmp300.hatenablog.com/entry/2019/10/02/185309.md
@@ -1,7 +1,9 @@
 ---
 Title: aliasを設定してみました
+Category:
+- docs
 Date: 2019-10-02T18:53:09+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/10/02/185309
+URL: https://docs.koheitakahashi.com/entry/2019/10/02/185309
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613443777117
 ---
 
