--- a/nmp300.hatenablog.com/entry/2019/10/03/200601.md
+++ b/nmp300.hatenablog.com/entry/2019/10/03/200601.md
@@ -1,12 +1,12 @@
 ---
 Title: HTMLでフォームをつくる
 Category:
+- docs
 - HTML
 Date: 2019-10-03T20:06:01+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/10/03/200601
+URL: https://docs.koheitakahashi.com/entry/2019/10/03/200601
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613444268148
 ---
-
 
 ## はじめに
 
