--- a/nmp300.hatenablog.com/entry/2019/10/14/193930.md
+++ b/nmp300.hatenablog.com/entry/2019/10/14/193930.md
@@ -1,7 +1,10 @@
 ---
 Title: プログラミングを学習し始めて600時間(120日)が経過しました
+Category:
+- 学習記録
+- FJORD BOOT CAMP
 Date: 2019-10-14T19:39:30+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/10/14/193930
+URL: https://docs.koheitakahashi.com/entry/2019/10/14/193930
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613449429996
 ---
 
