--- a/nmp300.hatenablog.com/entry/2019/10/15/191448.md
+++ b/nmp300.hatenablog.com/entry/2019/10/15/191448.md
@@ -1,11 +1,11 @@
 ---
 Title: pgでデータベースから引っ張ってきたデータの型を変えるには？
 Category:
+- TIL
 - Ruby
 - データベース
-- Webアプリ
 Date: 2019-10-15T19:14:48+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/10/15/191448
+URL: https://docs.koheitakahashi.com/entry/2019/10/15/191448
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613449878126
 ---
 
