--- a/nmp300.hatenablog.com/entry/2019/10/21/191729.md
+++ b/nmp300.hatenablog.com/entry/2019/10/21/191729.md
@@ -1,7 +1,9 @@
 ---
 Title: The Twelve-Factor Appを自分の中で整理してみました
+Category:
+- TIL
 Date: 2019-10-21T19:17:29+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/10/21/191729
+URL: https://docs.koheitakahashi.com/entry/2019/10/21/191729
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613453401022
 ---
 
