--- a/nmp300.hatenablog.com/entry/2019/10/31/084727.md
+++ b/nmp300.hatenablog.com/entry/2019/10/31/084727.md
@@ -1,7 +1,9 @@
 ---
 Title: 『パーフェクトRuby on Rails』を読了しました
+Category:
+- 読書ノート
 Date: 2019-10-31T08:47:27+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/10/31/084727
+URL: https://docs.koheitakahashi.com/entry/2019/10/31/084727
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613458388653
 ---
 
