--- a/nmp300.hatenablog.com/entry/2019/11/21/102851.md
+++ b/nmp300.hatenablog.com/entry/2019/11/21/102851.md
@@ -1,9 +1,9 @@
 ---
 Title: はじめて、Rubyの勉強会(Sendagaya.rb)に参加させていただきました
 Category:
-- 参加レポート
+- イベント参加レポート
 Date: 2019-11-21T10:28:51+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/11/21/102851
+URL: https://docs.koheitakahashi.com/entry/2019/11/21/102851
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613468653509
 ---
 
