--- a/nmp300.hatenablog.com/entry/2019/12/15/135445.md
+++ b/nmp300.hatenablog.com/entry/2019/12/15/135445.md
@@ -1,10 +1,9 @@
 ---
 Title: 平成Ruby会議に参加しました(発表資料まとめ編)
 Category:
-- コミュニティ
-- 参加レポート
+- イベント参加レポート
 Date: 2019-12-15T13:54:45+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/12/15/135445
+URL: https://docs.koheitakahashi.com/entry/2019/12/15/135445
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613484288398
 ---
 
