--- a/nmp300.hatenablog.com/entry/2019/12/18/205608.md
+++ b/nmp300.hatenablog.com/entry/2019/12/18/205608.md
@@ -1,9 +1,9 @@
 ---
 Title: '銀座Rails #16 に参加しました'
 Category:
-- 参加レポート
+- イベント参加レポート
 Date: 2019-12-18T20:56:08+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/12/18/205608
+URL: https://docs.koheitakahashi.com/entry/2019/12/18/205608
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613485838817
 ---
 
