--- a/nmp300.hatenablog.com/entry/2019/12/19/204815.md
+++ b/nmp300.hatenablog.com/entry/2019/12/19/204815.md
@@ -1,9 +1,9 @@
 ---
 Title: Sendagaya.rbで初めてLTをさせていただきました
 Category:
-- 参加レポート
+- イベント参加レポート
 Date: 2019-12-19T20:48:15+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/12/19/204815
+URL: https://docs.koheitakahashi.com/entry/2019/12/19/204815
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613486235995
 ---
 
