--- a/nmp300.hatenablog.com/entry/2020/02/21/205313.md
+++ b/nmp300.hatenablog.com/entry/2020/02/21/205313.md
@@ -1,9 +1,9 @@
 ---
 Title: 「駆け出しエンジニアのための、初めてのLT会」を主催させていただきました
 Category:
-- 参加レポート
+- イベント参加レポート
 Date: 2020-02-21T20:53:13+09:00
-URL: https://nmp300.hatenablog.com/entry/2020/02/21/205313
+URL: https://docs.koheitakahashi.com/entry/2020/02/21/205313
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613517297710
 ---
 
