--- a/nmp300.hatenablog.com/entry/2020/04/02/123259.md
+++ b/nmp300.hatenablog.com/entry/2020/04/02/123259.md
@@ -1,9 +1,9 @@
 ---
 Title: Sendagaya.rb#308 参加レポート
 Category:
-- 参加レポート
+- イベント参加レポート
 Date: 2020-04-02T12:32:59+09:00
-URL: https://nmp300.hatenablog.com/entry/2020/04/02/123259
+URL: https://docs.koheitakahashi.com/entry/2020/04/02/123259
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613543719531
 ---
 
