--- a/nmp300.hatenablog.com/entry/2020/04/20/103151.md
+++ b/nmp300.hatenablog.com/entry/2020/04/20/103151.md
@@ -1,9 +1,10 @@
 ---
 Title: 初めてOSSにPRを送りマージされました
 Category:
+- docs
 - OSS活動
 Date: 2020-04-20T10:31:51+09:00
-URL: https://nmp300.hatenablog.com/entry/2020/04/20/103151
+URL: https://docs.koheitakahashi.com/entry/2020/04/20/103151
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613552706382
 ---
 
