ActionCableの記事を投稿

--- a/nmp300.hatenablog.com/entry/2020/08/20/124333.md
+++ b/nmp300.hatenablog.com/entry/2020/08/20/124333.md
@@ -1,11 +1,13 @@
 ---
-Title: ■
+Title: ActionCableの概要をまとめてみました
+Category:
+- Programmer
+- Ruby on Rails
 Date: 2020-08-20T12:43:33+09:00
 URL: https://docs.koheitakahashi.com/entry/2020/08/20/124333
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613617119587
-Draft: true
 ---
-# ActionCableが実現しているWebSocket通信の概要を伝えたい
+
 ## はじめに
 少し前の記事で、自分が担当したActionCableを用いた機能実装について解説しました。
 
