カテゴリーを編集

--- a/nmp300.hatenablog.com/entry/2020/01/16/185519.md
+++ b/nmp300.hatenablog.com/entry/2020/01/16/185519.md
@@ -1,10 +1,11 @@
 ---
 Title: 『初めてのJavaScript』を読了しました ~学んだことのまとめ~
 Category:
+- Programmer
 - JavaScript
 - 読書ノート
 Date: 2020-01-16T18:55:19+09:00
-URL: https://nmp300.hatenablog.com/entry/2020/01/16/185519
+URL: https://docs.koheitakahashi.com/entry/2020/01/16/185519
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613498500103
 ---
 
