--- a/nmp300.hatenablog.com/entry/2020/01/25/104708.md
+++ b/nmp300.hatenablog.com/entry/2020/01/25/104708.md
@@ -1,6 +1,7 @@
 ---
 Title: Sendagaya.rb(#299)に参加しました ~初めてのソースコードリーディング~
 Category:
+- Programmer
 - イベント参加レポート
 Date: 2020-01-25T10:47:08+09:00
 URL: https://docs.koheitakahashi.com/entry/2020/01/25/104708
