--- a/nmp300.hatenablog.com/entry/2020/02/21/205313.md
+++ b/nmp300.hatenablog.com/entry/2020/02/21/205313.md
@@ -1,6 +1,7 @@
 ---
 Title: 「駆け出しエンジニアのための、初めてのLT会」を主催させていただきました
 Category:
+- Programmer
 - イベント参加レポート
 Date: 2020-02-21T20:53:13+09:00
 URL: https://docs.koheitakahashi.com/entry/2020/02/21/205313
