--- a/nmp300.hatenablog.com/entry/2020/02/23/212628.md
+++ b/nmp300.hatenablog.com/entry/2020/02/23/212628.md
@@ -1,7 +1,7 @@
 ---
 Title: 最近使ってて良かったツールのご紹介
 Category:
-- docs
+- Programmer
 - 開発周辺ツール
 Date: 2020-02-23T21:26:28+09:00
 URL: https://docs.koheitakahashi.com/entry/2020/02/23/212628
