--- a/nmp300.hatenablog.com/entry/2020/04/02/123259.md
+++ b/nmp300.hatenablog.com/entry/2020/04/02/123259.md
@@ -1,6 +1,7 @@
 ---
 Title: Sendagaya.rb#308 参加レポート
 Category:
+- Programmer
 - イベント参加レポート
 Date: 2020-04-02T12:32:59+09:00
 URL: https://docs.koheitakahashi.com/entry/2020/04/02/123259
