--- a/nmp300.hatenablog.com/entry/2020/04/20/103151.md
+++ b/nmp300.hatenablog.com/entry/2020/04/20/103151.md
@@ -1,7 +1,7 @@
 ---
 Title: 初めてOSSにPRを送りマージされました
 Category:
-- docs
+- Programmer
 - OSS活動
 Date: 2020-04-20T10:31:51+09:00
 URL: https://docs.koheitakahashi.com/entry/2020/04/20/103151
