--- a/nmp300.hatenablog.com/entry/2020/05/11/113103.md
+++ b/nmp300.hatenablog.com/entry/2020/05/11/113103.md
@@ -1,6 +1,7 @@
 ---
 Title: オンラインでLT会を主催しました
 Category:
+- Programmer
 - イベント参加レポート
 Date: 2020-05-11T11:31:03+09:00
 URL: https://docs.koheitakahashi.com/entry/2020/05/11/113103
