--- a/nmp300.hatenablog.com/entry/2020/05/17/201020.md
+++ b/nmp300.hatenablog.com/entry/2020/05/17/201020.md
@@ -1,6 +1,7 @@
 ---
 Title: Sendagaya.rb#313 参加レポート
 Category:
+- Programmer
 - イベント参加レポート
 Date: 2020-05-17T20:10:20+09:00
 URL: https://docs.koheitakahashi.com/entry/2020/05/17/201020
