--- a/nmp300.hatenablog.com/entry/2020/05/24/094252.md
+++ b/nmp300.hatenablog.com/entry/2020/05/24/094252.md
@@ -1,6 +1,7 @@
 ---
 Title: Sendagaya.rb#314 参加レポート
 Category:
+- Programmer
 - イベント参加レポート
 Date: 2020-05-24T09:42:52+09:00
 URL: https://docs.koheitakahashi.com/entry/2020/05/24/094252
