--- a/nmp300.hatenablog.com/entry/2020/05/31/180759.md
+++ b/nmp300.hatenablog.com/entry/2020/05/31/180759.md
@@ -1,6 +1,7 @@
 ---
 Title: FJORD BOOT CAMPでスクラム開発のプラクティスを終えることができました
 Category:
+- Programmer
 - FJORD BOOT CAMP
 - 学習記録
 Date: 2020-05-31T18:07:59+09:00
