--- a/nmp300.hatenablog.com/entry/2020/07/05/172612.md
+++ b/nmp300.hatenablog.com/entry/2020/07/05/172612.md
@@ -1,9 +1,10 @@
 ---
 Title: FJORD BOOT CAMPの質問・雑談タイムで心がけていたこと
 Category:
+- Programmer
 - FJORD BOOT CAMP
 Date: 2020-07-05T17:26:12+09:00
-URL: https://nmp300.hatenablog.com/entry/2020/07/05/172612
+URL: https://docs.koheitakahashi.com/entry/2020/07/05/172612
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613594096396
 ---
 
