--- a/nmp300.hatenablog.com/entry/2020/07/05/191506.md
+++ b/nmp300.hatenablog.com/entry/2020/07/05/191506.md
@@ -1,7 +1,7 @@
 ---
 Title: ストレングスファインダーを受けてみました
 Category:
-- つれづれ
+- Daily life
 Date: 2020-07-05T19:15:06+09:00
 URL: https://docs.koheitakahashi.com/entry/2020/07/05/191506
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613594147873
