--- a/nmp300.hatenablog.com/entry/2020/08/03/081232.md
+++ b/nmp300.hatenablog.com/entry/2020/08/03/081232.md
@@ -1,9 +1,10 @@
 ---
 Title: FJORD BOOT CAMPを卒業できました!!
 Category:
+- Programmer
 - FJORD BOOT CAMP
 Date: 2020-08-03T08:12:32+09:00
-URL: https://nmp300.hatenablog.com/entry/2020/08/03/081232
+URL: https://docs.koheitakahashi.com/entry/2020/08/03/081232
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613608380531
 ---
 
