--- a/nmp300.hatenablog.com/entry/2020/08/12/202032.md
+++ b/nmp300.hatenablog.com/entry/2020/08/12/202032.md
@@ -1,6 +1,7 @@
 ---
 Title: Ruby Silverを受験しました
 Category:
+- Programmer
 - Ruby
 Date: 2020-08-12T20:20:32+09:00
 URL: https://docs.koheitakahashi.com/entry/2020/08/12/202032
