--- a/nmp300.hatenablog.com/entry/2020/08/15/121440.md
+++ b/nmp300.hatenablog.com/entry/2020/08/15/121440.md
@@ -1,7 +1,7 @@
 ---
 Title: 『宝石の国』読みましたー
 Category:
-- つれづれ
+- Daily life
 Date: 2020-08-15T12:14:40+09:00
 URL: https://docs.koheitakahashi.com/entry/2020/08/15/121440
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613614601715
