--- a/nmp300.hatenablog.com/entry/2020/08/16/225209.md
+++ b/nmp300.hatenablog.com/entry/2020/08/16/225209.md
@@ -1,7 +1,7 @@
 ---
 Title: ノートアプリを探して、RubyMineに行き着きました
 Category:
-- docs
+- Programmer
 - 開発周辺ツール
 Date: 2020-08-16T22:52:09+09:00
 URL: https://docs.koheitakahashi.com/entry/2020/08/16/225209
