--- a/nmp300.hatenablog.com/entry/2020/08/22/214704.md
+++ b/nmp300.hatenablog.com/entry/2020/08/22/214704.md
@@ -5,7 +5,7 @@ Category:
 - FJORD BOOT CAMP
 - 参加レポート
 Date: 2020-06-26T20:44:12+09:00
-URL: https://nmp300.hatenablog.com/entry/2020/06/26/204412
+URL: https://docs.koheitakahashi.com/entry/2020/08/22/214704
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613590245553
 Draft: true
 ---
